# typsteditor

./: .dockerignore  .gitignore  Dockerfile  README.md  generateCompletions.mjs  index.html  package-lock.json  package.json  server.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: BACKEND_OPTIMIZATION.md  COLLABORATION.md  PERFORMANCE.md  RELEASE_NOTES.md  TAURI.md  TAURI_PERFORMANCE_LEGACY.md
electron/: afterPack.cjs  main.cjs
linux-build/: Dockerfile  Dockerfile.win  build-win.sh  build.sh
scripts/: bench.mjs  setup.sh  strip-bundled-secrets.mjs  test-collab-protocol.mjs
src/: App.tsx  ExcalidrawEditor.tsx  ImageEditor.tsx  PackageInstaller.css  PackageInstaller.tsx  TemplateInstaller.tsx  collab.ts  collabProtocol.ts  globals.d.ts  index.css  main.tsx  monaco-edcore.d.ts  monacoLocal.ts  tinymistDiagnostics.ts  typstCompletions.ts  typstMonaco.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  proofread.rs  server.rs
src-tauri/ui-dummy/: index.html
src/components/: AppSettingsModal.tsx  BibManager.tsx  Boundary.tsx  CodeRunnerModal.tsx  DiagramBuilder.tsx  DriveSyncModal.tsx  EditSettings.tsx  EquationGallery.tsx  FeynmanBuilder.tsx  FigureBuilder.tsx  FlowchartCoder.tsx  HelpModal.tsx  ImagePlacer.tsx  InputModal.tsx  MatrixStudio.tsx  PdfPreview.tsx  Plot3DStudio.tsx  PlotStudio.tsx  QuiverDiagram.tsx  SaveAsModal.tsx  SlideStudio.tsx  SymbolDraw.tsx  SymbolPicker.tsx
workspace/: main.typ  showcase.typ
